First draft of vanilla bayes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ S3method(psiLogOdds,list)
 S3method(psiLogOdds,numeric)
 S3method(psiLogOddsInverse,list)
 S3method(psiLogOddsInverse,numeric)
+export(VanillaBayes)
+export(VanillaBayes.predictions)
 export(psiIdentity)
 export(psiIdentityInverse)
 export(psiLinear)
