lower case vanillaBayes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,6 @@ S3method(psiLogOdds,list)
 S3method(psiLogOdds,numeric)
 S3method(psiLogOddsInverse,list)
 S3method(psiLogOddsInverse,numeric)
-export(VanillaBayes)
-export(VanillaBayes.predictions)
 export(psiIdentity)
 export(psiIdentityInverse)
 export(psiLinear)
@@ -25,3 +23,5 @@ export(psiLogInverse)
 export(psiLogInverse.list)
 export(psiLogOdds)
 export(psiLogOddsInverse)
+export(vanillaBayes)
+export(vanillaBayes.predictions)
