--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,10 @@ S3method(psiPrelec,list)
 S3method(psiPrelec,numeric)
 S3method(psiPrelecInverse,list)
 S3method(psiPrelecInverse,numeric)
+S3method(vanillaBayes,list)
+S3method(vanillaBayes,predictions)
 export(multiCycle)
+export(multiCycleInverse)
 export(psiIdentity)
 export(psiIdentityInverse)
 export(psiLinear)
@@ -33,4 +36,3 @@ export(psiLogOddsInverse)
 export(psiPrelec)
 export(psiPrelecInverse)
 export(vanillaBayes)
-export(vanillaBayes.predictions)
