--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(psiPrelec,numeric)
 S3method(psiPrelecInverse,list)
 S3method(psiPrelecInverse,numeric)
 S3method(vanillaBayes,list)
+S3method(vanillaBayes,numeric)
 S3method(vanillaBayes,predictions)
 export(multiCycle)
 export(multiCycleInverse)
