--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(psiPrelecInverse,numeric)
 S3method(vanillaBayes,list)
 S3method(vanillaBayes,numeric)
 S3method(vanillaBayes,predictions)
+export(bayesianStevensPowerLaw)
 export(multiCycle)
 export(multiCycleInverse)
 export(psiIdentity)
