--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(psiIdentityInverse,numeric)
 S3method(psiLinear,list)
 S3method(psiLinear,numeric)
 S3method(psiLinearInverse,list)
+S3method(psiLinearInverse,logLikelihoodOfResponses)
 S3method(psiLinearInverse,numeric)
 S3method(psiLog,list)
 S3method(psiLog,numeric)
