--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(multiCycle,character)
 S3method(multiCycle,list)
 S3method(multiCycle,logLikelihoodOfResponses)
 S3method(multiCycle,numeric)
+S3method(multiCycleInverse,list)
 S3method(multiCycleInverse,logLikelihoodOfResponses)
 S3method(psiIdentity,list)
 S3method(psiIdentity,logLikelihoodOfResponses)
