--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,7 @@ S3method(vanillaBayes,predictions)
 export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
-export(fit)
+export(fitWarpedBayesModel)
 export(multiCycle)
 export(multiCycleInverse)
 export(psiIdentity)
