--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,9 @@ S3method(psiLog,character)
 S3method(psiLog,list)
 S3method(psiLog,logLikelihoodOfResponses)
 S3method(psiLog,numeric)
+S3method(psiLogInverse,list)
+S3method(psiLogInverse,logLikelihoodOfResponses)
+S3method(psiLogInverse,numeric)
 S3method(psiLogOdds,list)
 S3method(psiLogOdds,logLikelihoodOfResponses)
 S3method(psiLogOdds,numeric)
@@ -49,8 +52,6 @@ export(psiLinear)
 export(psiLinearInverse)
 export(psiLog)
 export(psiLogInverse)
-export(psiLogInverse.list)
-export(psiLogInverse.logLikelihoodOfResponses)
 export(psiLogOdds)
 export(psiLogOddsInverse)
 export(psiPrelec)
