--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(multiCycle,logLikelihoodOfResponses)
 S3method(multiCycle,numeric)
 S3method(multiCycleInverse,list)
 S3method(multiCycleInverse,logLikelihoodOfResponses)
+S3method(multiCycleInverse,numeric)
 S3method(psiIdentity,list)
 S3method(psiIdentity,logLikelihoodOfResponses)
 S3method(psiIdentity,numeric)
