--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,34 +7,42 @@ S3method(multiCycle,numeric)
 S3method(multiCycleInverse,list)
 S3method(multiCycleInverse,logLikelihoodOfResponses)
 S3method(multiCycleInverse,numeric)
+S3method(psiIdentity,default)
 S3method(psiIdentity,list)
 S3method(psiIdentity,logLikelihoodOfResponses)
 S3method(psiIdentity,numeric)
+S3method(psiIdentityInverse,default)
 S3method(psiIdentityInverse,list)
 S3method(psiIdentityInverse,logLikelihoodOfResponses)
 S3method(psiIdentityInverse,numeric)
+S3method(psiLinear,default)
 S3method(psiLinear,list)
 S3method(psiLinear,logLikelihoodOfResponses)
 S3method(psiLinear,numeric)
 S3method(psiLinearInverse,list)
 S3method(psiLinearInverse,logLikelihoodOfResponses)
 S3method(psiLinearInverse,numeric)
-S3method(psiLog,character)
+S3method(psiLog,default)
 S3method(psiLog,list)
 S3method(psiLog,logLikelihoodOfResponses)
 S3method(psiLog,numeric)
+S3method(psiLogInverse,default)
 S3method(psiLogInverse,list)
 S3method(psiLogInverse,logLikelihoodOfResponses)
 S3method(psiLogInverse,numeric)
+S3method(psiLogOdds,default)
 S3method(psiLogOdds,list)
 S3method(psiLogOdds,logLikelihoodOfResponses)
 S3method(psiLogOdds,numeric)
+S3method(psiLogOddsInverse,default)
 S3method(psiLogOddsInverse,list)
 S3method(psiLogOddsInverse,logLikelihoodOfResponses)
 S3method(psiLogOddsInverse,numeric)
+S3method(psiPrelec,default)
 S3method(psiPrelec,list)
 S3method(psiPrelec,logLikelihoodOfResponses)
 S3method(psiPrelec,numeric)
+S3method(psiPrelecInverse,default)
 S3method(psiPrelecInverse,list)
 S3method(psiPrelecInverse,logLikelihoodOfResponses)
 S3method(psiPrelecInverse,numeric)
