--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ S3method(psiPrelecInverse,numeric)
 S3method(vanillaBayes,list)
 S3method(vanillaBayes,numeric)
 S3method(vanillaBayes,predictions)
+export(bayesianGonzalezWu)
 export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
