Many small changes, including unit tests, for CRAN compatibility

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: WarpedBayes
-Title: What the Package Does (one line, title case)
+Title: Implements Design Pattern Discussed in Landy, Crawford, & Corbin
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("David", "Landy", email = "dhlandy@gmail.com", role = c("aut", "cre"))
+Description: This package implements psychophysical transformations (and their inverses) and the normal-normal "vanilla" bayesian estimation procedure, in functions that easily chain through piping. It makes it easy to generate and fit models, while viewing them as minor variations on a general theme: transformation from bounded to unbounded spaces along with simple Bayesian logic. 
 Depends: R (>= 3.3.3)
-License: What license is it under?
+License: WTFPL
 Encoding: UTF-8
 LazyData: true
+Imports:
+    tidyverse,
+    magrittr
 RoxygenNote: 6.0.1.9000
+Suggests: testthat
