testing some things

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,7 +48,6 @@ S3method(psiPrelecInverse,logLikelihoodOfResponses)
 S3method(psiPrelecInverse,numeric)
 S3method(vanillaBayes,list)
 S3method(vanillaBayes,numeric)
-S3method(vanillaBayes,predictions)
 export(bayesianGonzalezWu)
 export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
@@ -68,3 +67,5 @@ export(psiPrelec)
 export(psiPrelecInverse)
 export(vanillaBayes)
 importFrom(magrittr,"%>%")
+importFrom(stats,dnorm)
+importFrom(stats,rnorm)
