--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     tidyverse,
-    magrittr
+    magrittr,
+    tibble
 RoxygenNote: 6.0.1.9000
 Suggests: testthat
