--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
 export(fitWarpedBayesModel)
+export(fitWarpedBayesModelMinimizeSurfaceDeviance)
 export(multiCycle)
 export(multiCycleInverse)
 export(psiIdentity)
