Added some classic psychophysical models. Many more to come!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(bayesianGonzalezWu)
 export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
+export(classicStevensPowerLaw)
 export(fitWarpedBayesModel)
 export(multiCycle)
 export(multiCycleInverse)
