added classic files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,9 @@ export(bayesianGonzalezWu)
 export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
-export(classicStevensPowerLaw)
 export(fitWarpedBayesModel)
+export(gonzalezWu)
+export(landyBrowerBiasedSpence)
 export(multiCycle)
 export(multiCycleInverse)
 export(psiIdentity)
@@ -66,6 +67,8 @@ export(psiLogOdds)
 export(psiLogOddsInverse)
 export(psiPrelec)
 export(psiPrelecInverse)
+export(spence)
+export(stevensPowerLaw)
 export(vanillaBayes)
 importFrom(magrittr,"%>%")
 importFrom(stats,dnorm)
