--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,6 @@ Imports:
     magrittr,
     tibble
 RoxygenNote: 6.0.1.9000
-Suggests: testthat
+Suggests: 
+    testthat,
+    psychophysicalModels
