--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,13 @@ S3method(psiPrelecInverse,default)
 S3method(psiPrelecInverse,likelihoodOfResponses)
 S3method(psiPrelecInverse,list)
 S3method(psiPrelecInverse,numeric)
+S3method(uniCycle,default)
+S3method(uniCycle,likelihoodOfResponses)
+S3method(uniCycle,list)
+S3method(uniCycle,numeric)
+S3method(uniCycleInverse,likelihoodOfResponses)
+S3method(uniCycleInverse,list)
+S3method(uniCycleInverse,numeric)
 S3method(vanillaBayes,list)
 S3method(vanillaBayes,numeric)
 export(bayesianGonzalezWu)
@@ -53,6 +60,7 @@ export(bayesianSpatialMemoryHuttenlocher)
 export(bayesianSpatialMemoryLandyCrawfordCorbin2017)
 export(bayesianStevensPowerLaw)
 export(fitWarpedBayesModel)
+export(guessingModel)
 export(multiCycle)
 export(multiCycleInverse)
 export(psiIdentity)
@@ -65,6 +73,9 @@ export(psiLogOdds)
 export(psiLogOddsInverse)
 export(psiPrelec)
 export(psiPrelecInverse)
+export(uniCycle)
+export(uniCycleInverse)
+export(uniformGuessingModel)
 export(vanillaBayes)
 importFrom(magrittr,"%>%")
 importFrom(stats,dnorm)
